--- a/JediComlink/JediComlink.csproj
+++ b/JediComlink/JediComlink.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockLong.cs" />
     <Compile Include="Block.cs" />
     <Compile Include="Block01.cs" />
     <Compile Include="Block02.cs" />
