--- a/JediCodeplug/JediComlink.JediCodeplug.csproj
+++ b/JediCodeplug/JediComlink.JediCodeplug.csproj
@@ -133,6 +133,7 @@
     <Compile Include="ModelDecoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialDecoder.cs" />
+    <Compile Include="TypeDescriptors.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
