Added enum for Programming Source

--- a/JediCodeplug/JediComlink.JediCodeplug.csproj
+++ b/JediCodeplug/JediComlink.JediCodeplug.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="AuthCode.cs" />
     <Compile Include="Block.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="InternalBlocks\Block01.cs" />
     <Compile Include="InternalBlocks\Block02.cs" />
     <Compile Include="InternalBlocks\Block03.cs" />
